--- a/cms/package.json
+++ b/cms/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "snapshot:gen": "npx directus schema snapshot ./snapshot.yaml"
   },
   "keywords": [],
   "author": "",
